# snake_c

./: CMakeLists.txt
include/: direction.h  game_element.h  snake.h
src/: direction.c  snake.c
